# Data_Engineering_with_Postgresql_DBT_Airflow

./: Makefile  README.md  airflow.cfg  airflow.db  docker-compose.yaml  setup.py
.history/airflow/: airflow_20240505100932.cfg  airflow_20240505101457.cfg  airflow_20240505113525.cfg  airflow_20240505113541.cfg  airflow_20240505114707.cfg  airflow_20240506042816.cfg  airflow_20240506042932.cfg  airflow_20240506043631.cfg  airflow_20240506044118.cfg  airflow_20240506070100.cfg  airflow_20240506070615.cfg  airflow_20240506080248.cfg  airflow_20240506080303.cfg  airflow_20240506080414.cfg  airflow_20240506082757.cfg  airflow_20240506103753.cfg
Notebooks/: DataAnalysis.ipynb  DataAnalysis2.ipynb
airflow/: airflow.cfg  airflow.db
airflow/dags/: config.py  load_data_dag.py  utils.py
dags/: load_data_dag.py  utils.py
data_models_scripts/: create_tables.py  main.py
scripts/: config.py  db_connections.py  exceptions.py  utils.py
scripts/data_models_scripts/: db_connections.py  dev_script.py
scripts/development/: dev_load_data.py
scripts/production/: prod_load_data.py
scripts/staging/: staging_load_data.py
tests/: run_test.py  test_data_load_dag.py
traffic-data-swarm/: README.md  pyproject.toml
traffic-data-swarm/docs/source/: conf.py  index.rst
traffic-data-swarm/src/traffic_data_swarm/: __init__.py  __main__.py  settings.py
traffic-data-swarm/tests/: test_run.py
traffic-data-swarm/tests/pipelines/data_science/: test_pipeline.py
traffic_project/: dbt_project.yml  requirements.txt
traffic_project/models/: acceleration_analysis.sql  sources.yml  speed_analysis.sql  track_model.sql  track_model.yml  track_summary.sql  trajectory_summary.sql
traffic_project/sources/: df_track.yml
(+31 files in other folders)
